# raahi-bhushan-trading-algo

sensibull/: .env.example  .gitignore  README.md  admin_manager.py  app.py  apps_script.js  brokerage.py  compare_ltp_greeks.py  database.py  db_adapter.py  fork.md  migrate_db.py  migrate_to_supabase.py  pyproject.toml  render.yaml  requirements.txt  run_uv_app_supervisor.sh  scraper.py  supabase_schema.sql  urls.txt
sensibull/templates/: base.html  daily_view.html  export.html  historical_data.html  import.html  index.html  login.html  manage_profiles.html  notifications.html  notifications_all.html  openalgo.html  profile_overview.html  sync.html
strategy/: SURVIVOR_STRATEGY_EXPLAINED.md  WAVE_STRATEGY_EXPLAINED.md
